--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "bootstrap": "^5.3.2",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
+    "formik": "^2.4.5",
     "next": "14.0.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-icons": "^4.12.0",
+    "sass": "^1.69.5",
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   }
 }
